--- a/.env
+++ b/.env
@@ -29,11 +29,11 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mail.alotech.az
-MAIL_PORT=587
+MAIL_HOST=business92.web-hosting.com
+MAIL_PORT=465
 MAIL_USERNAME=admin@alotech.az
 MAIL_PASSWORD='?94NVOP0s,hI'
-MAIL_ENCRYPTION=null
+MAIL_ENCRYPTION=SSL
 MAIL_FROM_ADDRESS=admin@alotech.az
 MAIL_FROM_NAME="${APP_NAME}"
 
