--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME='Alotech'
 APP_ENV=local
 APP_KEY=base64:ah1HkrsHt9FZ4n5YIj+769J3hNDlpkxBzzVmNAHZ8tc=
 APP_DEBUG=true
-APP_URL=https://alotech.az/
+APP_URL=http://alotech.az/
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=alotech
+DB_DATABASE=megamwpk_alotech
 DB_USERNAME=root
-DB_PASSWORD=6cm4elb8
+DB_PASSWORD=12345678
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -32,7 +32,7 @@ MAIL_MAILER=smtp
 MAIL_HOST=business92.web-hosting.com
 MAIL_PORT=465
 MAIL_USERNAME=admin@alotech.az
-MAIL_PASSWORD='?94NVOP0s,hI'
+MAIL_PASSWORD='alotech.2022'
 MAIL_ENCRYPTION=SSL
 MAIL_FROM_ADDRESS=admin@alotech.az
 MAIL_FROM_NAME="${APP_NAME}"
@@ -50,3 +50,10 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+BANK_BASE_URL="https://mpi.3dsecure.az/cgi-bin/cgi_link"
+BANK_BASE_URL_TEST="https://testmpi.3dsecure.az/cgi-bin/cgi_link"
+
+API_BASE_URL=http://185.137.234.25:84/Trade/hs/cat
+API_USERNAME=web
+API_PASSWORD=123456
