--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,8 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+
+API_BASE_URL=http://185.137.234.25:84/Trade/hs/cat
+API_USERNAME=
+API_PASSWORD=
